--- a/addon/templates/components/export-selector.hbs
+++ b/addon/templates/components/export-selector.hbs
@@ -1,4 +1,4 @@
 <div class='export-selector-container' style="white-space: nowrap">
-  {{view "select" content=types value=selectedType}}
+  {{select-list content=types value=selectedType}}
   <button {{action 'triggerExport'}} style="margin-left:5px">{{actionText}}</button>
 </div>
