--- a/addon/templates/components/export-selector-onselect.hbs
+++ b/addon/templates/components/export-selector-onselect.hbs
@@ -1,3 +1,3 @@
 <div class='export-selector-container' style="white-space: nowrap">
-  {{select-list content=types value=selectedType action=(action triggerExport)}}
+  {{select-list content=types value=selectedType action=(action (triggerExport))}}
 </div>
