--- a/addon/templates/components/export-selector-onselect.hbs
+++ b/addon/templates/components/export-selector-onselect.hbs
@@ -1,3 +1,7 @@
-<div class='export-selector-container' style="white-space: nowrap">
-  {{select-list content=types value=selectedType action=(action (triggerExport))}}
+<div class='export-selector-container'>
+  <select onchange={{action triggerExport value="target.value"}}>
+    <option value="">{{selectPrompt}}</option>
+    <option value="Excel">Excel</option>
+    <option value="CSV">CSV</option>
+  </select>
 </div>
