--- a/addon/templates/components/export-selector-onselect.hbs
+++ b/addon/templates/components/export-selector-onselect.hbs
@@ -1,5 +1,5 @@
 <div class='export-selector-container'>
-  <select onchange={{action 'triggerExport' value="target.value"}}>
+  <select id='exportTypes' onchange={{action 'triggerExport' value="target.value"}}>
     <option value="">{{selectPrompt}}</option>
     <option value="Excel">Excel</option>
     <option value="CSV">CSV</option>
