--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,5 @@
 <h2 id="title">Welcome to Ember</h2>
 
+<button onClick={{action "downloadCSV"}}>Download CSV</button>
+<button onClick={{action "downloadXLSX"}}>Download XLSX (Excel)</button>
 {{outlet}}
