:new: Excel: Add multi-sheet support
Adds the option to specify multiple worksheets when exporting to Excel format.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,4 +2,5 @@
 
 <button onClick={{action "downloadCSV"}}>Download CSV</button>
 <button onClick={{action "downloadXLSX"}}>Download XLSX (Excel)</button>
+<button onClick={{action "downloadMultiSheetXLSX"}}>Download multi-sheet XLSX (Excel)</button>
 {{outlet}}
