--- a/addon/templates/components/export-selector.hbs
+++ b/addon/templates/components/export-selector.hbs
@@ -4,5 +4,5 @@
       <xs.option @value={{type}}>{{type}}</xs.option>
     {{/each}}
   </XSelect>
-  <button {{action 'triggerExport'}} style="margin-left:5px">{{actionText}}</button>
+  <button style="margin-left:5px" type="button" {{action 'triggerExport'}}>{{actionText}}</button>
 </div>
